--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,9 @@
 @tailwind base;
 
+main {
+    @apply p-3;
+}
+
 h1 {
     @apply text-4xl font-bold pb-3;
 }
@@ -22,7 +26,7 @@ p {
     @apply pb-3;
 }
 
-
 @tailwind components;
 
 @tailwind utilities;
+
